<resources>
    <string name="app_name">MovieAppMVVM</string>
    <string name="release_date">Release Date:</string>
    <string name="movie_title">Movie Title</string>
    <string name="the_movie_db">The Movie DB</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="connection_problem">Connection Problem!!</string>
    <string name="movie_info">Movie Info</string>
    <string name="movie_name">Movie Name</string>
    <string name="sub_title">Sub title</string>
    <string name="rating">Rating:</string>
    <string name="runtime">Runtime:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="overview">Overview:</string>
    <string name="popularity">Popularity:</string>
    <string name="vote">Vote Count:</string>
    <string name="language">Language:</string>
</resources>