<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/pale_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.popular_movie.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBarMain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvErrorMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/connection_problem"
            android:visibility="gone"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/the_movie_db"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/popular_movies"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvListMovie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:scrollbars="vertical"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>