<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.single_movie_details.SingleMovie">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/connection_problem"
            android:visibility="gone"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvMoviePoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/poster_placeholder"
                android:scaleType="matrix"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark_gray"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/movie_name"
                    android:textSize="24sp"
                    android:textColor="#F2FDFD02"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieTagline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/sub_title"
                    android:textColor="@color/colorTextGrey"
                    android:textSize="18sp"
                    android:textStyle="italic"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/movie_info"
                    android:textStyle="bold"
                    android:textColor="#B3DCB20B"
                    android:textSize="18sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/release_date"
                        android:textColor="#80DCB20B"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvReleaseDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:text=""
                        android:textColor="@color/colorTextGrey"
                        android:textStyle="italic"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/rating"
                        android:textColor="#80DCB20B"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/colorTextGrey"
                        android:text=""
                        android:textStyle="italic"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/runtime"
                        android:textColor="#80DCB20B"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvRuntime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:text=""
                        android:textColor="@color/colorTextGrey"
                        android:textStyle="italic"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/budget"
                        android:textColor="#80DCB20B"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:text=""
                        android:textColor="@color/colorTextGrey"
                        android:textStyle="italic"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/revenue"
                        android:textColor="#80DCB20B"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvRevenue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:text=""
                        android:textColor="@color/colorTextGrey"
                        android:textStyle="italic"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/overview"
                    android:textColor="#80DCB20B"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorTextGrey"
                    android:text=""
                    android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>