<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layoutMovieItem"
    android:layout_height="400px"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:background="@color/dark_gray">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvPoster"
        android:layout_width="300px"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/movie_title"
        android:textColor="#F2FDFD02"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imvPoster"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutPopularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="345px"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layoutVote"
        app:layout_constraintStart_toEndOf="@+id/imvPoster"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity"
            android:textStyle="bold"
            android:textColor="#80DCB20B"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textColor="@color/colorTextGrey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutVote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="345px"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layoutLanguage"
        app:layout_constraintStart_toEndOf="@+id/imvPoster"
        app:layout_constraintTop_toBottomOf="@+id/layoutPopularity">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote"
            android:textStyle="bold"
            android:textColor="#80DCB20B"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textColor="@color/colorTextGrey"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="345px"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layoutReleaseDate"
        app:layout_constraintStart_toEndOf="@+id/imvPoster"
        app:layout_constraintTop_toBottomOf="@+id/layoutVote">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textStyle="bold"
            android:textColor="#80DCB20B"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textColor="@color/colorTextGrey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutReleaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="345px"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvPoster"
        app:layout_constraintTop_toBottomOf="@+id/layoutLanguage">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textStyle="bold"
            android:textColor="#80DCB20B"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textColor="@color/colorTextGrey" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>